<resources>
    <string name="app_name">AndroidPersistanceEval</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name ?</string>
    <string name="ammount">Ammount?</string>
    <string name="date">Date ?</string>
    <string name="type">Type ?</string>
    <string name="add_expense">Add Expense</string>
    <string name="save_expense">Save Expense</string>
</resources>